StanfordNER dependency removed: 1. StanfordNER in under GPLv2 license, which caused confusion about re-distribution. Hence, removed the dependency. 2. Variable names improved. Variable which kept information about the status were named 'process_val', they are changed to 'process_status'.